# graphsemantics

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
docs/: architecture.md  installation.md  usage.md
examples/: query_movies.py
src/graphsemantics/: agent.py  cli.py  database.py  tools.py
tests/unit/: test_database.py
