[tool.poetry]
name = "graphsemantics"
version = "0.1.0"
description = "A semantic layer over Neo4j graph database using LangChain"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "graphsemantics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-openai = "^0.0.2"
neo4j = "^5.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
